refactor to react app

--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
 
     <div class="footer__copyright">© 1997–2023 ООО «Яндекс»</div>
 </footer>
-<script type="module" src="./src/index.jsx"></script>
+<script type="module" src="/src/index.jsx"></script>
 </body>
 </html>
